Fixed sizing of infobox headers and overflow of certain posts

--- a/data/assets/css/components/_homepage-header.scss
+++ b/data/assets/css/components/_homepage-header.scss
@@ -31,6 +31,7 @@
       #476098 66.666%,
       #476098 83.333%,
       #A7489B 83.333%);
+    background-clip: text;
     background-size: 80%;
     background-repeat: repeat;
     -webkit-background-clip: text;
