--- a/data/assets/css/components/_infobox.scss
+++ b/data/assets/css/components/_infobox.scss
@@ -10,7 +10,7 @@
   // Header text
   > .header {
     display: flex;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     font-weight: 500;
 
     :first-child {
